--- a/calculator.html
+++ b/calculator.html
@@ -1,19 +1,84 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="/favicon.ico">
     <meta name="referrer" content="origin">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="calculator.css"/>
-    <title>Freelance calculator</title>
+    <title>Convert annual salary into hourly rate</title>
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <![endif]-->
+    <script src="assets/jquery.min.js"></script>
+    <script src="assets/rangeslider.min.js"></script>
+    <script src="assets/calculator.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/calculator.css"/>
   </head>
   <body>
-    <div id="background">
-      Calculator goes here!
+    <div class="row">
+      <input type="range" min="50000" max="250000" step="5000" value="150000" id="annualInput" data-rangeslider>
+      <div class="calculator">
+        <h1>
+          <div class="annual">
+            <label>Annual Salary</label>
+            <output id="annualOutput"></output>
+          </div>
+          <div class="equivalency">=</div>
+          <div class="hourly">
+            <label>Hourly Rate</label>
+            <output id="hourlyOutput"></output>
+          </div>
+        </h1>
+        <h2>Assumptions</h2>
+        <div class="column">
+          <div class="variablesRow">
+            Adjust size/color of font to indicate norm (green = norm, reddish = outside range, dark red = very far outside range)
+            PTO: 5 (add increments https://dribbble.com/shots/1448458-Increment-buttons)
+          </div>
+          <div class="variablesRow">
+            Sick days: 5 (add slider)
+          </div>
+        </div>
+      </div>
     </div>
-    <script src="calculator.js"></script>
+    <script>
+      $(function() {
+        $annualOutput = $('output#annualOutput')[0];
+        $startingAnnual = 150000;
+        $hourlyOutput = $('output#hourlyOutput')[0];
+        $startingHourly = 100;
+
+        // For ie8 support
+        var textContent = ('textContent' in document) ? 'textContent' : 'innerText';
+
+        // Helpers
+        function valueOutput(element) {
+          var value = element.value;
+          var output = element.parentNode.getElementsByTagName('output')[0] || element.parentNode.parentNode.getElementsByTagName('output')[0];
+          output[textContent] = '$' + Number(value).toLocaleString();
+        }
+
+        $(document).on('input', 'input[type="range"]#annualInput, [data-rangeslider]', function(e) {
+          valueOutput(e.target);
+        });
+
+        // Initialize range slider
+        $('input[type="range"]#annualInput').rangeslider({
+          polyfill: false,
+          onInit: function() {
+            $annualOutput.value = $startingAnnual;
+            valueOutput($annualOutput);
+            $hourlyOutput.value = $startingHourly;
+            valueOutput($hourlyOutput);
+          },
+
+          onSlide: function(position, value) {
+              // console.log('onSlide');
+              // console.log('position: ' + position, 'value: ' + value);
+          },
+
+        });
+      });
+    </script>
   </body>
 </html>
