--- a/calculator.html
+++ b/calculator.html
@@ -40,20 +40,20 @@
       <input type="range" min="50000" max="250000" step="5000" value="150000" id="annualInput" data-rangeslider> </input>
       <table class="assumptions">
         <tr><th class="assumptions-header"><h2>Assumptions</h2></th></tr>
-        <tr><th>Work Days / Year</th></tr>
+        <tr><th class="assumptions-label">Work Days / Year</th></tr>
         <tr>
           <td>
             <!-- TODO: add tooltips for assumptions (e.g., citations) -->
             <input type="image" id="workDaysDecrement" src="assets/images/32px-Circle_arrow_down_font_awesome.svg.png" class="assumption-data" />
-            <output id="workDaysOutput" type="number" value="261" class="assumption-data"></output>
+            <b><output id="workDaysOutput" type="number" value="261" class="assumption-data"></output></b>
             <input type="image" id="workDaysIncrement" src="assets/images/32px-Circle_arrow_up_font_awesome.svg.png" class="assumption-data" />
           </td>
         </tr>
-        <tr><th>Work Hours / Day</th></tr>
+        <tr><th class="assumptions-label">Work Hours / Day</th></tr>
         <tr>
           <td>
             <input type="image" id="workHoursDecrement" src="assets/images/32px-Circle_arrow_down_font_awesome.svg.png" class="assumption-data" />
-            <output id="workHoursOutput" type="number" value="8" class="assumption-data"></output>
+            <b><output id="workHoursOutput" type="number" value="8" class="assumption-data"></output></b>
             <input type="image" id="workHoursIncrement" src="assets/images/32px-Circle_arrow_up_font_awesome.svg.png" class="assumption-data" />
           </td>
         </tr>
@@ -61,6 +61,9 @@
     </div>
     <script>
       $(function() {
+        // For ie8 support
+        var textContent = ('textContent' in document) ? 'textContent' : 'innerText';
+
         // Headline items
         $annualOutput = $('output#annualOutput')[0];
         $startingAnnual = 150000;
@@ -72,9 +75,6 @@
         $workHoursOutput = $('output#workHoursOutput')[0];
         $startingWorkHours = 8;
 
-        // For ie8 support
-        var textContent = ('textContent' in document) ? 'textContent' : 'innerText';
-
         // Helpers
         function valueOutput(element, currency = null) {
           var value = element.value;
@@ -85,20 +85,22 @@
 
         function adjustAndReturnTarget(element) {
           id = element.currentTarget.id;
-          var minMaxLookup = {
-            'workDaysIncrement': { 'max': 365 },
-            'workDaysDecrement': { 'min': 0 },
-            'workHoursIncrement': { 'max': 24 },
-            'workHoursDecrement': { 'min': 0 },
+          var maxes = {
+            'workDaysIncrement': 365,
+            'workHoursIncrement': 24
+          }
+          var mins = {
+            'workDaysDecrement': 0,
+            'workHoursDecrement': 0
           }
 
           var target = null;
           if (id.includes('Increment')) {
             target = element.target.previousElementSibling;
-            if (target.value < minMaxLookup[id]['max']) { target.value++; }
+            if (target.value < maxes[id]) { target.value++; }
           } else if (id.includes('Decrement')) {
             target = element.target.nextElementSibling;
-            if (target.value > minMaxLookup[id]['min']) { target.value--; }
+            if (target.value > mins[id]) { target.value--; }
           } else {
             console.log('Uh oh. Something went wrong.');
           }
